PR/58223: RVP: Don't write to stdout when testing.